--- a/style.css
+++ b/style.css
@@ -44,3 +44,28 @@ border-bottom: 1px solid lightgray;
 .textss{
   color: red;
 }
+
+
+
+
+
+
+
+.spinner {
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  border: 8px solid #f3f3f3;
+  border-top: 8px solid #3498db;
+  border-radius: 50%;
+  width: 60px;
+  height: 60px;
+  animation: spin 1s linear infinite;
+  z-index: 1000; /* Ensure it appears above other elements */
+}
+
+@keyframes spin {
+  0% { transform: rotate(0deg); }
+  100% { transform: rotate(360deg); }
+}
